fixed page footer fix for sidebar collapse.

--- a/public/themes/admin/default/assets/styles/less/style.less
+++ b/public/themes/admin/default/assets/styles/less/style.less
@@ -228,9 +228,7 @@ h1 {
  .collapsed {
  	.sidebar { width:80px;}
  	.page {margin-left:80px;}
- 	.page {bottom:0;
-		right:28px;
-		left:88px;}
+ 	.page .page__footer {left:80px;}
  	.console {margin-left:80px;}
  	.sidebar__toggle{ background: url('../../img/sidebar-open.png') center center no-repeat; }
  	.sidebar span{ display:none; }
